# mgr

./: README.md
fsw/cfs/: CMakeLists.txt
fsw/cfs/mission_inc/: mgr_perfids.h
fsw/cfs/platform_inc/: mgr_msgids.h  mgr_platform_cfg.h
fsw/cfs/src/: mgr_app.c  mgr_app.h  mgr_events.h  mgr_msg.h  mgr_version.h
fsw/cfs/unit-test/: CMakeLists.txt
fsw/cfs/unit-test/coveragetest/: coveragetest_mgr_app.c  mgr_app_coveragetest_common.h
fsw/cfs/unit-test/inc/: ut_mgr_app.h
fsw/cfs/unit-test/stubs/: mgr_device_stubs.c
fsw/fprime/: CMakeLists.txt
fsw/fprime/platform_inc/: mgr_msgids.h  mgr_platform_cfg.h
fsw/fprime/src/: mgr_app.h
fsw/shared/: mgr_device.c  mgr_device.h
gsw/: mgr.xtce
gsw/MGR/cmd_tlm/: MGR_CMD.txt  MGR_TLM.txt
gsw/MGR/procedures/: mgr_test.rb
gsw/MGR/procedures/tests/: mgr_cpt_test.rb  mgr_lpt_test.rb
